make app one component for simplicity of hydration with json file

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 .app {
-    @apply max-w-full flex items-center justify-center h-screen mx-auto;
+    @apply max-w-full flex items-center justify-center h-screen mx-auto overflow-scroll;
 }
 
 .movie-list {
